--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+Meta information (not tracked)
+meta/
+
+# FreeCAD Backup files
+*.fcstd1
+*.fcstd2
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
